@@ -30,29 +30,33 @@ const char *testmagic_classname[_TMAGIC_CLASS_EOF] = {
 	"data", "text-data", "keys", "passwords"
 };
 
+const char *testmagic_subclassname[_TMAGIC_SUBCLASS_EOF] = {
+	NULL, "pgp/gpg", "ssh", "pem", "luks", "chiasmus", "mcrypt"
+};
+
 static const struct testmagic_lexrule testmagic_lex[] = {
 	{ "data", TMAGIC_CLASS_DATA, 0, TESTX_CONTINUE },
 	{ "ASCII text", TMAGIC_CLASS_ASCII, 0, TESTX_ENORESULT },
-	{ "PGP public key block", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "PGP message", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "PGP\011Secret Key", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "GPG symmetrically encrypted data", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "GPG key public ring", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "GPG encrypted data", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "PGP symmetric key encrypted data", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "PGP encrypted data", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "PGP RSA encrypted session key", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "OpenSSH", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "PEM RSA private key", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "PEM DSA private key", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "PEM EC private key", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
+	{ "PGP public key block", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "PGP message", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "PGP\011Secret Key", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "GPG symmetrically encrypted data", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "GPG key public ring", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "GPG encrypted data", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "PGP symmetric key encrypted data", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "PGP encrypted data", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "PGP RSA encrypted session key", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_PGP, TESTX_SUCCESS },
+	{ "OpenSSH", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_SSH, TESTX_SUCCESS },
+	{ "PEM RSA private key", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_PEM, TESTX_SUCCESS },
+	{ "PEM DSA private key", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_PEM, TESTX_SUCCESS },
+	{ "PEM EC private key", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_PEM, TESTX_SUCCESS },
 	{ "Keepass password database", TMAGIC_CLASS_PASS, 0, TESTX_SUCCESS },
 	{ "Password Safe V3 database", TMAGIC_CLASS_PASS, 0, TESTX_SUCCESS },
 	{ "cvs password text file", TMAGIC_CLASS_PASS, 0, TESTX_SUCCESS },
-	{ "LUKS encrypted file", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "Chiasmus encrypted data", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
-	{ "Chiasmus key", TMAGIC_CLASS_KEY, 0, TESTX_SUCCESS },
-	{ "mcrypt", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
+	{ "LUKS encrypted file", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_LUKS, TESTX_SUCCESS },
+	{ "Chiasmus encrypted data", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_CHIASMUS, TESTX_SUCCESS },
+	{ "Chiasmus key", TMAGIC_CLASS_KEY, TMAGIC_SUBCLASS_CHIASMUS, TESTX_SUCCESS },
+	{ "mcrypt", TMAGIC_CLASS_DATA, TMAGIC_SUBCLASS_MCRYPT, TESTX_SUCCESS },
 	{ "GNOME keyring", TMAGIC_CLASS_PASS, 0, TESTX_SUCCESS },
 	{ "Mac OS X Keychain File", TMAGIC_CLASS_PASS, 0, TESTX_SUCCESS },
 	{ "Vim encrypted file data", TMAGIC_CLASS_DATA, 0, TESTX_SUCCESS },
